@@ -268,7 +268,6 @@ $strConfigImport_xlsx_col_names_name = __('Column names in first row');
 $strConfigInitialSlidersState_name = __('Initial state for sliders');
 $strConfigInsertRows_desc = __('How many rows can be inserted at one time');
 $strConfigInsertRows_name = __('Number of inserted rows');
-$strConfigLeftDefaultTabTable_name = __('Target for quick access icon');
 $strConfigLeftDisplayLogo_desc = __('Show logo in left frame');
 $strConfigLeftDisplayLogo_name = __('Display logo');
 $strConfigLeftDisplayServers_desc = __('Display server choice at the top of the left frame');
@@ -309,6 +308,7 @@ $strConfigMcryptDisableWarning_desc = __('Disable the default warning that is di
 $strConfigMcryptDisableWarning_name = __('mcrypt warning');
 $strConfigMemoryLimit_desc = __('The number of bytes a script is allowed to allocate, eg. [kbd]32M[/kbd] ([kbd]0[/kbd] for no limit)');
 $strConfigMemoryLimit_name = __('Memory limit');
+$strConfigNavigationTreeDefaultTabTable_name = __('Target for quick access icon');
 $strConfigNavigationTreeEnableGrouping_desc = __('Group items in the navigation tree (determined by the separator defined below)');
 $strConfigNavigationTreeEnableGrouping_name = __('Group items in the tree');
 $strConfigNavigationTreeDbSeparator_desc = __('String that separates databases into different tree levels');
