@@ -60,6 +60,7 @@ VerboseMultiSubmit, ReplaceHelpImg
 + Renamed configuration directive: LeftFrameTableSeparator => NavigationTreeTableSeparator
 + Renamed configuration directive: LeftFrameTableLevel => NavigationTreeTableLevel
 + Renamed configuration directive: LeftPointerEnable => NavigationTreePointerEnable
++ Renamed configuration directive: LeftDefaultTabTable => NavigationTreeDefaultTabTable
 
 3.5.4.0 (not yet released)
 - bug #3570212 [edit] uuid_short() is a no-arguments function
